add: Node.js Docker Template

--- a/node/docker/package.json
+++ b/node/docker/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "outqource-docker",
+  "name": "node-template-docker",
   "version": "0.0.1",
   "scripts": {
-    "config:local": "cp ./env/.env.local .env",
-    "config:dev": "cp ./env/.env.dev .env ",
-    "config:prod": "cp ./env/.env.prod .env",
+    "config:local": "cp env/.env.local .env",
+    "config:dev": "cp env/.env.dev .env && cp env/dev.Dockerfile Dockerfile",
+    "config:prod": "cp env/.env.prod .env && cp env/prod.Dockerfile Dockerfile",
     "_migrate": "prisma migrate dev",
     "_run": "nodemon --watch '*.ts' --exec 'ts-node' -r tsconfig-paths/register ./src/index.ts",
     "_build": "rm -rf dist && tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
@@ -13,19 +13,16 @@
     "dev": "yarn config:dev && yarn _run",
     "prod": "yarn config:prod && yarn _run",
     "migrate:dev": "yarn config:dev && yarn _migrate",
-    "migrate:stage": "yarn config:stage && yarn _migrate",
     "migrate:prod": "yarn config:prod && yarn _migrate",
     "build:dev": "yarn config:dev && yarn _build",
-    "build:stage": "yarn config:dev && yarn _build",
     "build:prod": "yarn config:prod && yarn _build",
     "image:dev": "cp env/dev.Dockerfile Dockerfile && yarn build:dev",
-    "image:stage": "cp env/stage.Dockerfile Dockerfile && yarn build:stage",
     "image:prod": "cp env/prod.Dockerfile Dockerfile && yarn build:prod"
   },
   "dependencies": {
     "@adminjs/express": "^5.0.0",
     "@adminjs/prisma": "^3.0.1",
-    "@fuseble.inc/node": "^0.0.1",
+    "@fuseble.inc/node": "^1.2.4",
     "@prisma/client": "^4.2.1",
     "adminjs": "^6.1.4",
     "cookie-parser": "^1.4.6",
@@ -54,6 +51,7 @@
     "eslint": "^8.18.0",
     "fs-extra": "^10.1.0",
     "nodemon": "^2.0.18",
+    "prettier": "^2.7.1",
     "ts-node": "^10.8.1",
     "tsc-alias": "^1.7.0",
     "tsconfig-paths": "^4.0.0",
