--- a/react/next/package.json
+++ b/react/next/package.json
@@ -4,17 +4,18 @@
   "private": true,
   "scripts": {
     "_env": "node scripts/set-environment.js",
+    "_build": "next build && next export -o build",
+    "_run": "next dev",
+    "_start": "next start",
+    "_container": "node scripts/create-container.js",
     "env:dev": "yarn _env dev",
     "env:prod": "yarn _env prod",
-    "create:container": "node scripts/create-container.js",
-    "dev": "yarn env:dev && node scripts/create-containers.js && next dev",
-    "prod": "yarn env:prod && next dev",
-    "build:dev": "yarn env:dev && next build",
-    "build:prod": "yarn env:prod && next build",
+    "dev": "yarn env:dev && yarn _run",
+    "prod": "yarn env:prod && yarn _run",
+    "build:dev": "yarn env:dev && yarn _build",
+    "build:prod": "yarn env:prod && yarn _build",
     "deploy": "node scripts/ssg-deploy.js -b <BUCKET_NAME> -r ap-northeast-2",
-    "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install",
+    "preinstall": "husky install",
     "pre-commit": "lint-staged"
   },
   "husky": {
@@ -37,6 +38,7 @@
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.0",
     "next": "12.2.2",
+    "next-seo": "^5.14.1",
     "query-string": "^7.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
