--- a/react/next/.eslintrc.json
+++ b/react/next/.eslintrc.json
@@ -35,6 +35,8 @@
     ],
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
-    "@typescript-eslint/no-unused-vars": ["warn"]
+    "@typescript-eslint/no-unused-vars": ["warn"],
+    "import/named": "off",
+    "react/display-name": "off"
   }
 }
