--- a/shortcut/introduce-company/backend/package.json
+++ b/shortcut/introduce-company/backend/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "node-template-docker",
+  "name": "shortcut-backend",
   "version": "0.0.1",
   "scripts": {
-    "config:local": "cp env/.env.local .env",
-    "config:dev": "cp env/.env.dev .env",
-    "config:prod": "cp env/.env.prod .env && cp env/prod.Dockerfile Dockerfile",
-    "_prisma": "npx fuseble-cli prisma --path=prisma/modules && prisma format",
-    "_migrate": "prisma migrate dev",
-    "_run": "nodemon --config nodemon.json",
     "_build": "rm -rf dist && tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "_migrate": "prisma migrate dev",
+    "_prisma": "npx fuseble-cli prisma --path=prisma/modules && prisma format",
+    "_run": "nodemon --watch '*.ts' --exec 'ts-node' -r tsconfig-paths/register src/index.ts",
     "_start": "node dist/index.js",
-    "local": "yarn config:local && yarn _run",
-    "dev": "yarn config:dev && yarn _run",
-    "prod": "yarn config:prod && yarn _run",
-    "migrate:dev": "yarn config:dev && yarn _migrate",
-    "migrate:prod": "yarn config:prod && yarn _migrate",
     "build:dev": "yarn config:dev && yarn _build",
     "build:prod": "yarn config:prod && yarn _build",
+    "config:dev": "cp env/.env.dev .env",
+    "config:local": "cp env/.env.local .env",
+    "config:prod": "cp env/.env.prod .env && cp env/prod.Dockerfile Dockerfile",
+    "dev": "yarn config:dev && yarn _run",
     "image:dev": "cp env/dev.Dockerfile Dockerfile && yarn build:dev",
-    "image:prod": "cp env/prod.Dockerfile Dockerfile && yarn build:prod"
+    "image:prod": "cp env/prod.Dockerfile Dockerfile && yarn build:prod",
+    "local": "yarn config:local && yarn _run",
+    "migrate:dev": "yarn config:dev && yarn _migrate",
+    "migrate:prod": "yarn config:prod && yarn _migrate",
+    "prod": "yarn config:prod && yarn _run"
   },
   "dependencies": {
     "@adminjs/express": "^5.0.0",
@@ -41,6 +41,7 @@
     "prisma": "^4.7.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
