--- a/node/express/package.json
+++ b/node/express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-template-docker",
+  "name": "node-express-template",
   "version": "0.0.1",
   "scripts": {
     "config:local": "cp env/.env.local .env",
@@ -23,10 +23,11 @@
   "dependencies": {
     "@adminjs/express": "^5.0.0",
     "@adminjs/prisma": "^3.0.1",
-    "@fuseble.inc/node": "^1.6.8",
+    "@fuseble.inc/node": "1.7.0",
     "@prisma/client": "^4.7.1",
     "adminjs": "^6.1.4",
     "bcrypt": "^5.1.0",
+    "debug": "^4.3.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-formidable": "^1.2.0",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
+    "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
     "@types/morgan": "^1.9.3",
